# Angel-One-MCP-Server

./: .env.sample  README.md  pyproject.toml  requirements.txt  server.py  trade_on_angel_one.py
